# lemongrab

./: .README  .gitignore  MANIFEST.in  Makefile  README.md  config.py  lemongrab.py  pyproject.toml  requirements.txt
lemongrab/: browser.py  cli.py  combined_dataset.py  company_dataset.py  company_network.py  diggr_api.py  games_company_data_table.py  sample_company_network.py  settings.py  utils.py  wikidata.py
lemongrab/datasets/: mobygames_companies_id_to_slug.json
lemongrab/static/css/: lemongrab.css
lemongrab/templates/: analysis.html  index.html
tests/: conftest.py  test_cli.py
